--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord | Your Place to Talk and Hang out</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">    
     <link rel="stylesheet" href="main.css">
 
     <style>
