--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord | Your Place to Talk and Hang out</title>
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">    
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="main.css">
 
     <style>
@@ -99,12 +99,12 @@
 
             <!--background images-->
             <!-- <img src="./images/Image0.svg" alt="" class=" md:block absolute -z-10 bottom-10 top-auto scale-x-[2] scale-y-[2.5]"> -->
-            <img src="./images/Image0.svg" alt="" class=" md:block absolute -z-10 bottom-0 top-auto left-0 right-0">
+            <img src="./images/Image0.svg" alt="" class="hidden md:block absolute scale-y-[3] scale-150 -z-10 bottom-[18rem] top-auto left-0 right-0">
 
             <img src="./images/Image1.svg" alt="" class="absolute hidden lg:block -right-[20rem] -bottom-[0px]">
-            <img src="./images/Image2.svg" alt="" class="absolute right-8 md:-right-[2rem] lg:-left-[25rem] -bottom-[0px]">
+            <img src="./images/Image2.svg" alt="" class="absolute right-4 md:-right-[2rem] lg:-left-[25rem] -bottom-[0px]">
 
-            <div class="max-w-[1260px] mx-auto relative pb-[22rem] md:pb-[9rem] lg:pb-0 py-[60px] lg:py-[120px] px-[30px] md:px-[40px] mb-4 z-10">
+            <div class="max-w-[1260px] mx-auto relative pb-[11rem] md:pb-[9rem] lg:pb-0 py-[60px] lg:py-[120px] px-[30px] md:px-[40px] mb-4 z-10">
 
                 <h2 class="font-[GintoNord] font-extrabold leading-[3.25rem] uppercase 
                 text-white text-[2rem] md:text-[2.5rem] lg:text-[3.5rem] text-start lg:text-center">
@@ -238,7 +238,7 @@
                 </button>
 
                 <!--For medium and small screen-->
-                <button class="md:hidden font-[ggSans] text-xl font-[500] text-center text-white py-4 px-16 
+                <button class="md:hidden font-[ggSans] text-xl font-[500] text-center text-white py-4 px-4 
                 rounded-[3rem] bg-[#404EED] hover:bg-[#5865F2] hoverShadow mt-10">
                 Download from 
                 <i class="fa-brands fa-google-play"></i>
